...
    <string name="login_small_logo_description">应用小图标</string>
    <string name="login_app_logo_description">应用图标</string>
    <string name="login_phone_number_hint">请输入您的手机号码</string>
    <string name="login_verification_code_hint">输入验证码</string>
    <string name="login_button_text">确定登录</string>
    <string name="login_resend_code_countdown">%d秒后重发</string>
    <string name="login_send_code_button_text">发送验证码</string>
    <string name="login_agreement_prefix">我已阅读并同意</string>
    <string name="login_user_agreement">《用户协议》</string>
    <string name="login_agreement_and">和</string>
    <string name="login_privacy_policy">《隐私政策》</string>
    <string name="login_agreement_confirm_message">点击“同意”即表示您已阅读并同意《用户协议》和《隐私政策》，系统将为您自动勾选。点击“取消”将关闭弹窗。</string>
    <string name="login_agreement_confirm_action">同意</string>
    <string name="login_agreement_cancel_action">取消</string>
    <string name="login_validation_entry_title">功能验证</string>
    <string name="login_validation_entry_description">可在此验证人脸、读卡和拍照等设备及业务能力。</string>
    <string name="login_validation_entry_face_verification">人脸验证</string>
    <string name="login_validation_entry_face_verification_description">输入订单 ID，使用正式服务验证人脸</string>
    <string name="login_validation_entry_nfc">碰一碰 / R65C 验证</string>
    <string name="login_validation_entry_nfc_description">验证手机 NFC 或 R65C 外接读卡器读取卡号</string>
...
